--- a/index.html
+++ b/index.html
@@ -33,9 +33,9 @@
               <li class="nav__list"><a href="#">Statistika</a></li>
             </ul>
 
-            <button class="btn__login">
+            <div class="btn__login">
               <a href="#">Kirish</a>
-            </button>
+            </div>
           </div>
         </div>
       </nav>
@@ -72,39 +72,30 @@
       <section class="section_two">
         <div class="container">
           <div class="section_2">
-
-            <h2>
-              Magistraturaga topshiruvchilar uchun imtiyozlar
-            </h2>
+            <h2>Magistraturaga topshiruvchilar uchun imtiyozlar</h2>
 
             <ul class="section_2__ul">
               <li class="section_2__li">
-                <img src="./images/yutuq.svg" alt="yutuq_icon">
-                <h3>
-                  Yutuqlar
-                </h3>
+                <img src="./images/yutuq.svg" alt="yutuq_icon" />
+                <h3>Yutuqlar</h3>
                 <p>
-                  Nomdor davlat stipendiyalari va “Zulfiya” hamda “Mard o'g'lon” davlat mukofatlari.
-                </p>
-              </li>
-              
-              <li class="section_2__li">
-                <img src="./images/certificate.svg" alt="certificate_icon">
-                <h3>
-                  Sertifikatlar
-                </h3>
-                <p>
-                  Xorijiy tillar bo'yicha hamda milliy sertifikatlar.
+                  Nomdor davlat stipendiyalari va “Zulfiya” hamda “Mard o'g'lon”
+                  davlat mukofatlari.
                 </p>
               </li>
 
               <li class="section_2__li">
-                <img src="./images/nogiron.svg" alt="nogiron_icon">
-                <h3>
-                  Nogironlik imtiyozi
-                </h3>
+                <img src="./images/certificate.svg" alt="certificate_icon" />
+                <h3>Sertifikatlar</h3>
+                <p>Xorijiy tillar bo'yicha hamda milliy sertifikatlar.</p>
+              </li>
+
+              <li class="section_2__li">
+                <img src="./images/nogiron.svg" alt="nogiron_icon" />
+                <h3>Nogironlik imtiyozi</h3>
                 <p>
-                  9- va 11- sinflarni maxsus maktablara ta'lim olgan ko'zi ojiz fuqarolar
+                  9- va 11- sinflarni maxsus maktablara ta'lim olgan ko'zi ojiz
+                  fuqarolar
                 </p>
               </li>
             </ul>
@@ -118,155 +109,314 @@
         <div class="container">
           <div class="section_3">
             <div class="section_3_task">
-              <h2>
-                Qabul tizimdan qanday foydalaniladi?
-              </h2>
+              <h2>Qabul tizimdan qanday foydalaniladi?</h2>
               <p>
-                Saytimiz yoki mobil ilovamizdan ro'yxatdan o'ting so'ngra o'zingiz istagan kurslardan birini tanlab, to'lovni amalga oshiring va yangi bilimlar olish imkoniyatiga ega bo'ling.
+                Saytimiz yoki mobil ilovamizdan ro'yxatdan o'ting so'ngra
+                o'zingiz istagan kurslardan birini tanlab, to'lovni amalga
+                oshiring va yangi bilimlar olish imkoniyatiga ega bo'ling.
               </p>
             </div>
-            <iframe src="https://www.youtube.com/embed/804Om1dsKM8" title="Dasturchilarga matematika qanchalik muhim va "Men bilmayman..."" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <iframe
+              src="https://www.youtube.com/embed/804Om1dsKM8"
+              title="Dasturchilarga matematika qanchalik muhim"
+              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+              allowfullscreen
+            ></iframe>
           </div>
         </div>
       </section>
       <!-- section three end -->
-
 
       <!-- section four start -->
       <section class="section_four">
         <div class="container">
           <div class="section_4">
             <h2>Ariza topshirish va uni qabul qilish jarayoni</h2>
-            <hr>
+            <hr />
 
             <ul class="section_4__ul">
-
               <li class="section_4__list">
-                <img src="./images/one.svg" alt="one_icon">
-                <h3>
-                  Tizimdan ro'yxatdan o'tiladi va ariza topshirladi
-                </h3>
+                <img src="./images/one.svg" alt="one_icon" />
+                <h3>Tizimdan ro'yxatdan o'tiladi va ariza topshirladi</h3>
                 <p>
-                  Tizimdan oneid orqali ro'yxatdan o'ting va shaxsiy ma'lumotlaringizni to'ldiring va ariza qoldiring.
+                  Tizimdan oneid orqali ro'yxatdan o'ting va shaxsiy
+                  ma'lumotlaringizni to'ldiring va ariza qoldiring.
                 </p>
               </li>
 
               <li class="section_4__list">
-                <img src="./images/two.svg" alt="two_icon">
-                <h3>
-                  Diplom ma'lumotlarini tekshirish va tasdiqlash
-                </h3>
+                <img src="./images/two.svg" alt="two_icon" />
+                <h3>Diplom ma'lumotlarini tekshirish va tasdiqlash</h3>
                 <p>
-                  Ariza birinchi bo'lib ariza topshiruvchining bakalavrlik oliy ta'lim muassasiga borib tushadi va shu yerda diplom tekshiriladi.
+                  Ariza birinchi bo'lib ariza topshiruvchining bakalavrlik oliy
+                  ta'lim muassasiga borib tushadi va shu yerda diplom
+                  tekshiriladi.
                 </p>
               </li>
 
               <li class="section_4__list">
-                <img src="./images/three.svg" alt="three_icon">
-                <h3>
-                  Tizimdan ro'yxatdan o'tiladi va ariza topshirladi
-                </h3>
+                <img src="./images/three.svg" alt="three_icon" />
+                <h3>Tizimdan ro'yxatdan o'tiladi va ariza topshirladi</h3>
                 <p>
-                  Tizimdan oneid orqali ro'yxatdan o'ting va shaxsiy ma'lumotlaringizni to'ldiring va ariza qoldiring.
+                  Tizimdan oneid orqali ro'yxatdan o'ting va shaxsiy
+                  ma'lumotlaringizni to'ldiring va ariza qoldiring.
                 </p>
               </li>
             </ul>
           </div>
-        </div>        
+        </div>
       </section>
       <!-- section four end -->
 
       <!-- section five start -->
       <section class="section_5">
         <div class="container">
-          <h2>
-            OTMlar va yo'nalishlar kesimida arizalar statistikasi
-          </h2>
+          <h2>OTMlar va yo'nalishlar kesimida arizalar statistikasi</h2>
 
           <div class="form_card">
             <div class="form_card_title">
               <h4>Filtr</h4>
               <p>Filtrni tozalash</p>
             </div>
-            
+
             <form action="#">
-
-              <input list="list" placeholder="OTM nomini tanlang">
+              <input list="list" placeholder="OTM nomini tanlang" />
               <datalist id="list">
-                <option value="Toshkent Moliya instituti">Toshkent Moliya instituti</option>
-                <option value="Toshkent Davlat Iqtisodiyot instituti">Toshkent Davlat Iqtisodiyot instituti</option>
-              </datalist> 
+                <option value="Toshkent Moliya instituti">
+                  Toshkent Moliya instituti
+                </option>
+                <option value="Toshkent Davlat Iqtisodiyot instituti">
+                  Toshkent Davlat Iqtisodiyot instituti
+                </option>
+              </datalist>
 
-              <input list="list2" placeholder="Ta'lim tilini tanlang">
+              <input list="list2" placeholder="Ta'lim tilini tanlang" />
               <datalist id="list2">
                 <option value="O'zbek tili">O'zbek tili</option>
                 <option value="Rus tili">Rus tili</option>
                 <option value="Ingliz tili">Ingliz tili</option>
               </datalist>
 
-              <input class="button_submit" type="submit" value="Natijani qo'llash"> 
-
+              <input
+                class="button_submit"
+                type="submit"
+                value="Natijani qo'llash"
+              />
             </form>
-          </div>          
+          </div>
+
+          <table class="table">
+            <thead>
+              <tr>
+                <th rowspan="2">Mutaxasislik nomi</th>
+                <th rowspan="2">Mutaxasislik shifiri</th>
+                <th rowspan="2">Age</th>
+                <th colspan="2">Name</th>
+              </tr>
+              <tr>
+                <th>First Name</th>
+                <th>Last Name</th>
+              </tr>
+            </thead>
+
+            <tbody>
+              <tr>
+                <td>New York No. 1 Lake Park</td>
+                <td class="shifr">Invite Brown</td>
+                <td>32</td>
+                <td>John</td>
+                <td>Brown</td>
+              </tr>
+
+              <tr>
+                <td>London No.1 Lake Park</td>
+                <td class="shifr">Invite Green</td>
+                <td>42</td>
+                <td>Jim</td>
+                <td>Green</td>
+              </tr>
+
+              <tr>
+                <td>Sidney No. 1 Lake Park</td>
+                <td class="shifr">Invite Black</td>
+                <td>32</td>
+                <td>Joe</td>
+                <td>Black</td>
+              </tr>
+            </tbody>
+          </table>
+          <div class="next">
+            <img src="./images/prev_next.svg" alt="next_icon" />
+          </div>
         </div>
       </section>
+      <!-- section five end -->
 
+      <!-- section telegram start -->
+      <section class="section_tgm">
+        <div class="container">
+          <div class="telegram">
+            <h2>Telegram orqali bildirishnomlarni tez va oson qabul qiling!</h2>
+            <div class="button_tgm">
+              <img src="./images/icon_tgm.svg" alt="icon_tgm" />
+              <a href="#">Telegramda qabul qiling</a>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section telegram end -->
 
+      <!-- section six start -->
+      <section class="section_six">
+        <div class="container">
+          <div class="section_6_task">
+            <h2>Ta'lim va qabulga oid yangiliklar</h2>
 
+            <div class="section_6_item">
+              <div class="section_6_card">
+                <img src="./images/abiturients.png" alt="abiturients" />
+                <p class="date">November 25, 2022</p>
+                <p class="info">
+                  Qabul-2020: Magistraturaga qabul va kirish imtihonlari haqida
+                  batafsil
+                </p>
+              </div>
 
+              <div class="section_6_card">
+                <img src="./images/magistr.png" alt="magistr" />
+                <p class="date">November 25, 2022</p>
+                <p class="info">
+                  2021/2022 o'quv yili qabulida magistraturaga o'qishga qabul
+                  ...
+                </p>
+              </div>
 
+              <div class="section_6_card">
+                <img src="./images/champions.png" alt="champions" />
+                <p class="date">November 25, 2022</p>
+                <p class="info">Yana bir talaba Osiyo chempioni bo'ldi!</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- section six end -->
 
+      <!-- section seven start -->
+      <div class="container">
+        <div class="section_7">
+          <div class="section_7_card">
+            <img src="./images/document1.png" alt="document1" />
+            <h4>Qabul parametrlari</h4>
+            <p>2021/2022 o'quv yili uchun qabul kvotalari bilan tanishing</p>
+            <div class="download_btn">
+              <img src="./images/download_icon.svg" alt="download_icon" />
+              <a href="#">Yuklab olish</a>
+            </div>
+          </div>
 
-
-
-
-
+          <div class="section_7_card">
+            <img
+              class="section_7_card_img"
+              src="./images/document2.png"
+              alt="document2"
+            />
+            <h4>Turdosh yo'nalishlar</h4>
+            <p>Turdosh yo'nalishlar bir biriga mosligini ko'rib chiqing</p>
+            <div class="download_btn">
+              <img src="./images/download_icon.svg" alt="download_icon" />
+              <a href="#">Yuklab olish</a>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- section seven end -->
 
       <!-- footer start -->
       <footer class="footer">
         <div class="container">
           <div class="footer_task">
             <div class="footer_logo">
-              <img src="./images/footer_logo.svg" alt="logo">
+              <img src="./images/footer_logo.svg" alt="logo" />
               <p>
-                Portalda e'lon qilingan materiallardan nusxa ko'chirish, tarqatish va boshqa shakllarda foydalanish faqat tahririyat yozma roziligi bilan amalga oshirilishi mumkin.
+                Portalda e'lon qilingan materiallardan nusxa ko'chirish,
+                tarqatish va boshqa shakllarda foydalanish faqat tahririyat
+                yozma roziligi bilan amalga oshirilishi mumkin.
               </p>
             </div>
 
             <div class="footer_item">
               <ul class="footer__ul">
-                <li class="footer__list"> <h4>Asosiy</h4> </li>
-                <li class="footer__list"> <a href="#">Imtiyozlar</a></li>
-                <li class="footer__list"> <a href="#">Yangilklar</a></li>
-                <li class="footer__list"> <a href="#">Satastitika</a></li>
+                <li class="footer__list"><h4>Asosiy</h4></li>
+                <li class="footer__list"><a href="#">Imtiyozlar</a></li>
+                <li class="footer__list"><a href="#">Yangilklar</a></li>
+                <li class="footer__list"><a href="#">Satastitika</a></li>
               </ul>
 
               <ul class="footer__ul">
-                <li class="footer__list"> <h4>Biz ijtimoiy tarmoqlarda</h4> </li>
-                <li class="footer__list"> <a href="#"> <img src="./images/instagram.svg" alt="instagram_logo">Instagram</a></li>
-                <li class="footer__list"> <a href="#"> <img src="./images/telegram.svg" alt="telegram logo">Telegram</a></li>
-                <li class="footer__list"> <a href="#"> <img src="./images/facebook.svg" alt="facebook_logo">Facebook</a></li>
+                <li class="footer__list"><h4>Biz ijtimoiy tarmoqlarda</h4></li>
+                <li class="footer__list">
+                  <a href="#">
+                    <img
+                      src="./images/instagram.svg"
+                      alt="instagram_logo"
+                    />Instagram</a
+                  >
+                </li>
+                <li class="footer__list">
+                  <a href="#">
+                    <img
+                      src="./images/telegram.svg"
+                      alt="telegram logo"
+                    />Telegram</a
+                  >
+                </li>
+                <li class="footer__list">
+                  <a href="#">
+                    <img
+                      src="./images/facebook.svg"
+                      alt="facebook_logo"
+                    />Facebook</a
+                  >
+                </li>
               </ul>
 
               <ul class="footer__ul">
-                <li class="footer__list"> <h4>Bog'lanish</h4> </li>
-                <li class="footer__list"> <a href="tel"> <img src="./images/phone.svg" alt="tel_logo">+998336959550</a></li>
-                <li class="footer__list"> <a href="tel"> <img src="./images/phone.svg" alt="tel_logo">+998336959550</a></li>
-                <li class="footer__list"> <a href="#"> <img src="./images/convert.svg" alt="facebook_logo">aviapack@gmail.com</a></li>
+                <li class="footer__list"><h4>Bog'lanish</h4></li>
+                <li class="footer__list">
+                  <a href="tel">
+                    <img
+                      src="./images/phone.svg"
+                      alt="tel_logo"
+                    />+998336959550</a
+                  >
+                </li>
+                <li class="footer__list">
+                  <a href="tel">
+                    <img
+                      src="./images/phone.svg"
+                      alt="tel_logo"
+                    />+998336959550</a
+                  >
+                </li>
+                <li class="footer__list">
+                  <a href="#">
+                    <img
+                      src="./images/convert.svg"
+                      alt="facebook_logo"
+                    />aviapack@gmail.com</a
+                  >
+                </li>
               </ul>
             </div>
           </div>
           <div class="year">
-            <hr>
-            <h4>
-              2021 © Vakansiya edu.uz
-            </h4>
+            <hr/>
+            <h4>2021 © Vakansiya edu.uz</h4>
           </div>
         </div>
       </footer>
       <!-- footer end -->
-
-
     </main>
   </body>
 </html>
